# newshub

./: .env.example  .gitignore  Makefile  alembic.ini  docker-compose.yaml  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 47f36f8ab99d_added_log_table.py  a3797cf2b058_.py  acd20e04f760_initial_tables.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Footer.css  Footer.jsx  Header.css  Header.jsx  Logo.css  Logo.jsx  Main.css  Main.jsx  NewsCards.css  NewsCards.jsx  SearchBar.css  SearchBar.jsx
frontend/src/data/: newsData.json
src/app/: broker.py  config.py  ioc.py  main.py
src/app/api/routers/: __init__.py  news.py  source_admin.py
src/app/api/routers/admin/: source.py
src/app/api/schemas/: __init__.py  news.py  source.py
src/app/common/: broker.py  config.py  logging.py  pagination.py  scheduler.py
src/app/common/di/: providers.py  setup.py
src/app/db/: database.py
src/app/db/models/: __init__.py  logs.py  news.py  tags.py
src/app/db/repositories/: base.py  logs.py  news.py
src/app/services/: dto.py  exceptions.py  hash_service.py  news.py  news_collector.py  news_deduplicator.py  scheduler.py  source_admin.py
src/app/services/admin/: source.py
src/app/services/amqp/: handlers.py
src/app/services/collectors/: api_collector.py  article_extractor.py  rss_collector.py
src/app/services/news/: collector.py  deduplicator.py
src/app/services/news_pipeline/: collector.py  deduplicator.py
src/app/services/tasks/: rabbit_publisher.py  tasks.py
tests/unit/: conftest.py  test_repository.py
