[project]
name = "newshub"
version = "0.1.0"
description = ""
authors = [
    {name = "inal", email = "balkarov05@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["fastapi[standard] (>=0.115.12,<0.116.0)", "dishka (>=1.6.0,<2.0.0)", "sqlalchemy (>=2.0.41,<3.0.0)", "alembic (>=1.16.1,<2.0.0)", "asyncpg (>=0.30.0,<0.31.0)", "pytest-asyncio (>=1.0.0,<2.0.0)", "faststream (>=0.5.42,<0.6.0)", "apscheduler (>=3.11.0,<4.0.0)", "aiohttp (>=3.12.12,<4.0.0)", "tenacity (>=9.1.2,<10.0.0)"]

[[tool.poetry.packages]]
include = "app"
from = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"