[tool.poetry]
name = "newshub"
version = "0.1.0"
description = "News hub project"
authors = ["inal <balkarov05@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ ваш-репозиторий"
documentation = "https://ваш-документация"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = ">=0.115.12,<0.116.0"}
dishka = "^1.6.0"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
asyncpg = "^0.30.0"
pytest-asyncio = "^1.0.0"
faststream = "^0.5.42"
apscheduler = "^3.11.0"
aiohttp = "^3.12.12"
tenacity = "^9.1.2"
httpx = "^0.28.1"
python-dateutil = "^2.9.0.post0"
redis = "^6.2.0"
simhash = "^2.1.2"

[tool.poetry.dev-dependencies]

[[tool.poetry.packages]]
include = "app"
from = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"